- removed patched overlay on app loading background - fixed hover color on active nav-pills - fixed trace checkbox on collapsed menu on edit screen - new register page - navbar-inverse implemented along with menu clean-up on piston module

--- a/dashboard/css/modules/dashboard.module.css
+++ b/dashboard/css/modules/dashboard.module.css
@@ -870,7 +870,7 @@ ul.nav.nav-pills {
 }
 
 .nav-pills > li.active > a {
-	background-color: #00a0dc;
+	background-color: #00a0dc !important;
 	border-radius: 0px;
 	text-transform: uppercase;
 }
